check_PROGRAMS = eail_image_test \
		 eail_action_slider_test \
		 eail_check_test \
		 eail_radio_test \
		 eail_menu_test \
		 eail_scroller_test \
		 eail_list_test \
		 eail_genlist_test \
		 eail_button_test \
		 eail_tooltip_test \
		 eail_separator_test \
		 eail_progressbar_test \
		 eail_clock_test \
		 eail_spinner_test \
		 eail_calendar_test \
		 eail_grid_test \
		 eail_route_test \
		 eail_gengrid_test \
		 eail_dayselector_test \
		 eail_fileselector_test \
		 eail_disk_selector_test \
		 eail_conformant_test \
		 eail_notify_test \
		 eail_popup_test \
		 eail_web_test \
		 eail_win_test \
		 eail_toolbar_test \
		 eail_index_test \
		 eail_ctxpopup_test \
		 eail_focus_test \
		 eail_multibuttonentry_test \
		 eail_segment_control_test \
		 eail_file_selector_button_test \
		 eail_file_selector_entry_test \
		 eail_naviframe_test \
		 eail_colorselector_test \
		 eail_hover_test \
		 eail_panes_test \
		 eail_datetime_test \
		 eail_panel_test \
		 eail_hoversel_test \
		 eail_slideshow_test \
		 eail_map_test \
		 eail_glview_test \
		 eail_flipselector_test \
		 eail_mapbuf_test \
		 eail_video_test \
		 eail_layout_test \
		 eail_flip_test \
		 eail_bubble_test \
		 eail_plug_test \
		 eail_label_test \
		 eail_slider_test \
		 eail_prefs_test \
		 eail_background_test \
		 eail_table_test \
		 eail_thumb_test \
		 eail_icon_test \
		 eail_inwin_test \
		 eail_entry_test \
		 eail_photo_test \
		 eail_photocam_test

TESTS = $(check_PROGRAMS)

if MAKE_TESTS
noinst_LTLIBRARIES = libeail_test_utils.la
endif

test_cflags = $(TEST_DEPS_CFLAGS)
test_libs = $(TEST_DEPS_LIBS) \
	    $(COVERAGE_LIBS) \
	    libeail_test_utils.la

eail_action_slider_test_SOURCES = eail_action_slider_test.c
eail_action_slider_test_CFLAGS = $(test_cflags)
eail_action_slider_test_LDADD = $(test_libs)

eail_image_test_SOURCES = eail_image_test.c
eail_image_test_CFLAGS = $(test_cflags)
eail_image_test_LDADD = $(test_libs)

eail_check_test_SOURCES = eail_check_test.c
eail_check_test_CFLAGS = $(test_cflags)
eail_check_test_LDADD = $(test_libs)

eail_radio_test_SOURCES = eail_radio_test.c
eail_radio_test_CFLAGS = $(test_cflags)
eail_radio_test_LDADD = $(test_libs)

eail_menu_test_SOURCES = eail_menu_test.c
eail_menu_test_CFLAGS = $(test_cflags)
eail_menu_test_LDADD = $(test_libs)

eail_scroller_test_SOURCES = eail_scroller_test.c
eail_scroller_test_CFLAGS = $(test_cflags)
eail_scroller_test_LDADD = $(test_libs)

eail_list_test_SOURCES = eail_list_test.c
eail_list_test_CFLAGS = $(test_cflags)
eail_list_test_LDADD = $(test_libs)

eail_genlist_test_SOURCES = eail_genlist_test.c
eail_genlist_test_CFLAGS = $(test_cflags)
eail_genlist_test_LDADD = $(test_libs)

eail_button_test_SOURCES = eail_button_test.c
eail_button_test_CFLAGS = $(test_cflags)
eail_button_test_LDADD = $(test_libs)

eail_tooltip_test_SOURCES = eail_tooltip_test.c
eail_tooltip_test_CFLAGS = $(test_cflags)
eail_tooltip_test_LDADD = $(test_libs)

eail_clock_test_SOURCES = eail_clock_test.c
eail_clock_test_CFLAGS = $(test_cflags)
eail_clock_test_LDADD = $(test_libs)

eail_separator_test_SOURCES = eail_separator_test.c
eail_separator_test_CFLAGS = $(test_cflags)
eail_separator_test_LDADD = $(test_libs)

eail_progressbar_test_SOURCES = eail_progressbar_test.c
eail_progressbar_test_CFLAGS = $(test_cflags)
eail_progressbar_test_LDADD = $(test_libs)

eail_spinner_test_SOURCES = eail_spinner_test.c
eail_spinner_test_CFLAGS = $(test_cflags)
eail_spinner_test_LDADD = $(test_libs)

eail_calendar_test_SOURCES = eail_calendar_test.c
eail_calendar_test_CFLAGS = $(test_cflags)
eail_calendar_test_LDADD = $(test_libs)

eail_grid_test_SOURCES = eail_grid_test.c
eail_grid_test_CFLAGS = $(test_cflags)
eail_grid_test_LDADD = $(test_libs)

eail_route_test_SOURCES = eail_route_test.c
eail_route_test_CFLAGS = $(test_cflags)
eail_route_test_LDADD = $(test_libs)

eail_gengrid_test_SOURCES = eail_gengrid_test.c
eail_gengrid_test_CFLAGS = $(test_cflags)
eail_gengrid_test_LDADD = $(test_libs)

eail_dayselector_test_SOURCES = eail_dayselector_test.c
eail_dayselector_test_CFLAGS = $(test_cflags)
eail_dayselector_test_LDADD = $(test_libs)

eail_disk_selector_test_SOURCES = eail_disk_selector_test.c
eail_disk_selector_test_CFLAGS = $(test_cflags)
eail_disk_selector_test_LDADD = $(test_libs)

eail_fileselector_test_SOURCES = eail_fileselector_test.c
eail_fileselector_test_CFLAGS = $(test_cflags)
eail_fileselector_test_LDADD = $(test_libs)

eail_conformant_test_SOURCES = eail_conformant_test.c
eail_conformant_test_CFLAGS = $(test_cflags)
eail_conformant_test_LDADD = $(test_libs)

eail_notify_test_SOURCES = eail_notify_test.c
eail_notify_test_CFLAGS = $(test_cflags)
eail_notify_test_LDADD = $(test_libs)

eail_popup_test_SOURCES = eail_popup_test.c
eail_popup_test_CFLAGS = $(test_cflags)
eail_popup_test_LDADD = $(test_libs)

eail_toolbar_test_SOURCES = eail_toolbar_test.c
eail_toolbar_test_CFLAGS = $(test_cflags)
eail_toolbar_test_LDADD = $(test_libs)

eail_index_test_SOURCES = eail_index_test.c
eail_index_test_CFLAGS = $(test_cflags)
eail_index_test_LDADD = $(test_libs)

eail_multibuttonentry_test_SOURCES = eail_multibuttonentry_test.c
eail_multibuttonentry_test_CFLAGS = $(test_cflags)
eail_multibuttonentry_test_LDADD = $(test_libs)

eail_ctxpopup_test_SOURCES = eail_ctxpopup_test.c
eail_ctxpopup_test_CFLAGS = $(test_cflags)
eail_ctxpopup_test_LDADD = $(test_libs)

eail_focus_test_SOURCES = eail_focus_test.c
eail_focus_test_CFLAGS = $(test_cflags)
eail_focus_test_LDADD = $(test_libs)

eail_segment_control_test_SOURCES = eail_segment_control_test.c
eail_segment_control_test_CFLAGS = $(test_cflags)
eail_segment_control_test_LDADD = $(test_libs)

eail_file_selector_button_test_SOURCES = eail_file_selector_button_test.c
eail_file_selector_button_test_CFLAGS = $(test_cflags)
eail_file_selector_button_test_LDADD = $(test_libs)

eail_file_selector_entry_test_SOURCES = eail_file_selector_entry_test.c
eail_file_selector_entry_test_CFLAGS = $(test_cflags)
eail_file_selector_entry_test_LDADD = $(test_libs)

eail_naviframe_test_SOURCES = eail_naviframe_test.c
eail_naviframe_test_CFLAGS = $(test_cflags)
eail_naviframe_test_LDADD = $(test_libs)

eail_hover_test_SOURCES = eail_hover_test.c
eail_hover_test_CFLAGS = $(test_cflags)
eail_hover_test_LDADD = $(test_libs)

eail_colorselector_test_SOURCES = eail_colorselector_test.c
eail_colorselector_test_CFLAGS = $(test_cflags)
eail_colorselector_test_LDADD = $(test_libs)

eail_panes_test_SOURCES = eail_panes_test.c
eail_panes_test_CFLAGS = $(test_cflags)
eail_panes_test_LDADD = $(test_libs)

eail_datetime_test_SOURCES = eail_datetime_test.c
eail_datetime_test_CFLAGS = $(test_cflags)
eail_datetime_test_LDADD = $(test_libs)

eail_panel_test_SOURCES = eail_panel_test.c
eail_panel_test_CFLAGS = $(test_cflags)
eail_panel_test_LDADD = $(test_libs)

eail_web_test_SOURCES = eail_web_test.c
eail_web_test_CFLAGS = $(test_cflags)
eail_web_test_LDADD = $(test_libs)

eail_mapbuf_test_SOURCES = eail_mapbuf_test.c
eail_mapbuf_test_CFLAGS = $(test_cflags)
eail_mapbuf_test_LDADD = $(test_libs)

eail_hoversel_test_SOURCES = eail_hoversel_test.c
eail_hoversel_test_CFLAGS = $(test_cflags)
eail_hoversel_test_LDADD = $(test_libs)

eail_slideshow_test_SOURCES = eail_slideshow_test.c
eail_slideshow_test_CFLAGS = $(test_cflags)
eail_slideshow_test_LDADD = $(test_libs)

eail_map_test_SOURCES = eail_map_test.c
eail_map_test_CFLAGS = $(test_cflags)
eail_map_test_LDADD = $(test_libs)

eail_win_test_SOURCES = eail_win_test.c
eail_win_test_CFLAGS = $(test_cflags)
eail_win_test_LDADD = $(test_libs)

eail_glview_test_SOURCES = eail_glview_test.c
eail_glview_test_CFLAGS = $(test_cflags)
eail_glview_test_LDADD = $(test_libs)

eail_flipselector_test_SOURCES = eail_flipselector_test.c
eail_flipselector_test_CFLAGS = $(test_cflags)
eail_flipselector_test_LDADD = $(test_libs)

eail_video_test_SOURCES = eail_video_test.c
eail_video_test_CFLAGS = $(test_cflags)
eail_video_test_LDADD = $(test_libs)

eail_layout_test_SOURCES = eail_layout_test.c
eail_layout_test_CFLAGS = $(test_cflags)
eail_layout_test_LDADD = $(test_libs)

eail_flip_test_SOURCES = eail_flip_test.c
eail_flip_test_CFLAGS = $(test_cflags)
eail_flip_test_LDADD = $(test_libs)

eail_bubble_test_SOURCES = eail_bubble_test.c
eail_bubble_test_CFLAGS = $(test_cflags)
eail_bubble_test_LDADD = $(test_libs)

eail_plug_test_SOURCES = eail_plug_test.c
eail_plug_test_CFLAGS = $(test_cflags)
eail_plug_test_LDADD = $(test_libs)

eail_slider_test_SOURCES = eail_slider_test.c
eail_slider_test_CFLAGS = $(test_cflags)
eail_slider_test_LDADD = $(test_libs)

eail_label_test_SOURCES = eail_label_test.c
eail_label_test_CFLAGS = $(test_cflags)
eail_label_test_LDADD = $(test_libs)

eail_prefs_test_SOURCES = eail_prefs_test.c
eail_prefs_test_CFLAGS = $(test_cflags)
eail_prefs_test_LDADD = $(test_libs)

eail_background_test_SOURCES = eail_background_test.c
eail_background_test_CFLAGS = $(test_cflags)
eail_background_test_LDADD = $(test_libs)

eail_table_test_SOURCES = eail_table_test.c
eail_table_test_CFLAGS = $(test_cflags)
eail_table_test_LDADD = $(test_libs)

eail_thumb_test_SOURCES = eail_thumb_test.c
eail_thumb_test_CFLAGS = $(test_cflags)
eail_thumb_test_LDADD = $(test_libs)

eail_icon_test_SOURCES = eail_icon_test.c
eail_icon_test_CFLAGS = $(test_cflags)
eail_icon_test_LDADD = $(test_libs)

eail_inwin_test_SOURCES = eail_inwin_test.c
eail_inwin_test_CFLAGS = $(test_cflags)
eail_inwin_test_LDADD = $(test_libs)

eail_entry_test_SOURCES = eail_entry_test.c
eail_entry_test_CFLAGS = $(test_cflags)
eail_entry_test_LDADD = $(test_libs)

eail_photo_test_SOURCES = eail_photo_test.c
eail_photo_test_CFLAGS = $(test_cflags)
eail_photo_test_LDADD = $(test_libs)

eail_photocam_test_SOURCES = eail_photocam_test.c
eail_photocam_test_CFLAGS = $(test_cflags)
eail_photocam_test_LDADD = $(test_libs)

libeail_test_utils_la_SOURCES = eail_test_utils.c eail_test_utils.h
libeail_test_utils_la_CFLAGS = $(TEST_DEPS_CFLAGS)
libeail_test_utils_la_LIBADD = $(TEST_DEPS_LIBS)

if MAKE_TESTS
all-local: check
endif

if ENABLE_COVERAGE
coverage: check
	$(LCOV) --directory $(srcdir) --capture \
                --output-file $(top_builddir)/eail.info
	$(LCOV) --directory $(srcdir) --output-file $(top_builddir)/eail.info \
                --remove $(top_builddir)/eail.info "*.c" "*.h"
	rm -rf $(top_builddir)/coverage
	$(mkdir_p) $(top_builddir)/coverage
	$(GENHTML) --output-directory $(top_builddir)/coverage \
                $(top_builddir)/eail.info
endif
